--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,7 +1,7 @@
-<h2>
+<h2 class="animated fadeIn fast" >
   About Comics App
 </h2>
 
-<p>
+<p class="animated fadeIn">
   Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur tenetur fugit numquam sit labore excepturi?
 </p>
