--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -13,19 +13,30 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['home']">Home </a>
+        <a class="nav-link" [routerLink]="['home']">Inicio </a>
       </li>
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['heroes']">Heroes </a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['about']">About</a>
+        <a class="nav-link" [routerLink]="['about']">Acerca de</a>
       </li>
 
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+
+      <input class="form-control mr-sm-2" 
+            type="text" 
+            placeholder="Nombre del Heroe"
+            (keyup.enter)="buscarHeroe(miHeroe.value)"
+            #miHeroe
+            (keydown.enter)="$event.preventDefault()">
+      <button class="btn btn-outline-light my-2 my-sm-0" 
+              (click)="buscarHeroe(miHeroe.value)"
+              type="button">
+          Buscar
+      </button>
+
     </form>
   </div>
 </nav>
